# svg2ooxml

./: .gitignore  pyproject.toml
docs/adr/: README.md
docs/notes/: 0.9-corpus-feedback-ledger.md
src/figma2gslides/api/services/: slides_publisher.py
src/figma2gslides/auth/: __init__.py
src/svg2ooxml/core/ir/: font_metrics.py
src/svg2ooxml/core/styling/: pattern_merge.py
src/svg2ooxml/core/styling/paint/: pattern.py
src/svg2ooxml/drawingml/: animation_pipeline.py  generator.py  paint_patterns.py  raster_adapter_pipeline.py  shape_renderer_patterns.py  skia_bridge.py  writer_elements.py  writer_scene.py
src/svg2ooxml/drawingml/animation/: flipbook.py  motion_fragments.py  policy.py  writer.py
src/svg2ooxml/elements/patterns/: tile_renderer.py
src/svg2ooxml/filters/: input_descriptors.py
src/svg2ooxml/filters/primitives/: blend.py
src/svg2ooxml/gsuite/: __init__.py  client.py
src/svg2ooxml/ir/: paint.py
src/svg2ooxml/render/: filters_executor.py
tests/unit/: test_public_api.py
tests/unit/core/: test_pptx_exporter_animation.py  test_resvg_routing.py
tests/unit/drawingml/: test_animation_pipeline.py  test_custgeom_generator.py
tests/unit/drawingml/animation/: test_flipbook_plumbing.py  test_motion_fragments.py
tests/unit/filters/primitives/: test_blend.py
tests/unit/io/: test_pptx_required_parts.py
tests/unit/map/: test_styles_fallbacks.py
tests/unit/render/: test_filters.py
tests/unit/services/: test_filter_registry_inputs.py  test_filter_service.py
tests/unit/tools/: test_visual_corpus_audit.py  test_visual_renderer.py
tools/ppt_research/: w3c_sidebyside_deck.py
tools/visual/: browser_renderer.py  corpus_audit.py  corpus_audit_animation.py  corpus_audit_scoring.py  renderer.py
