[build-system]
requires = [ "setuptools>=68", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "svg2ooxml"
version = "0.8.2"
description = "SVG-to-PowerPoint converter with native, editable PresentationML output."
readme = "README.pypi.md"
requires-python = ">=3.13"
dependencies = [ "tinycss2>=1.2", "click>=8.1", "lxml>=4.9.0", "pydantic>=2.5.3",]
license = "AGPL-3.0-only"
keywords = [ "svg", "pptx", "powerpoint", "ooxml", "drawingml",]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Topic :: Office/Business :: Office Suites",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
[[project.authors]]
name = "SVG2OOXML Contributors"

[project.urls]
Homepage = "https://github.com/BramAlkema/svg2ooxml"
Documentation = "https://github.com/BramAlkema/svg2ooxml/blob/main/docs/README.md"
Repository = "https://github.com/BramAlkema/svg2ooxml"
Issues = "https://github.com/BramAlkema/svg2ooxml/issues"
Changelog = "https://github.com/BramAlkema/svg2ooxml/releases"
"Commercial Licensing" = "https://github.com/BramAlkema/svg2ooxml/blob/main/LICENSE-COMMERCIAL.md"

[project.scripts]
svg2ooxml = "cli.main:run_cli"

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "httpx>=0.27",
  "isort>=5.12",
  "mypy>=1.8",
  "pre-commit>=3.5",
  "pytest>=7.4",
  "ruff>=0.4.0",
  "python-pptx>=0.6.23",
]
accel = [ "numpy>=1.24",]
color = [ "numpy>=1.24", "colorspacious>=1.1.0", "Pillow>=10.0",]
render = [ "skia-python>=87.5", "Pillow>=10.0", "numpy>=1.24",]
slides = [ "cryptography>=41.0", "fonttools>=4.43",]
api = [ "fastapi>=0.109.0", "uvicorn[standard]>=0.27.0", "pydantic>=2.5.3", "python-multipart>=0.0.6", "PyJWT>=2.8.0",]
cloud = [ "google-cloud-firestore>=2.14.0", "google-cloud-storage>=2.14.0", "google-auth>=2.26", "google-auth-oauthlib>=1.2.0",]
gsuite = [ "google-auth>=2.26",]
payments = [ "stripe>=8.0.0",]
visual-testing = [ "scikit-image>=0.21.0", "Pillow>=10.0.0",]
figma2gslides = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "python-multipart>=0.0.6",
  "PyJWT>=2.8.0",
  "cryptography>=41.0",
  "google-cloud-firestore>=2.14.0",
  "google-cloud-storage>=2.14.0",
  "google-auth>=2.26",
  "google-auth-oauthlib>=1.2.0",
]

[tool.black]
line-length = 88
target-version = [ "py313",]

[tool.isort]
profile = "black"
line_length = 88
src_paths = [ "src", "tests",]

[tool.ruff]
target-version = "py313"
line-length = 88
src = [ "src", "tests",]
exclude = [ "venv",]

[tool.ruff.lint]
select = [ "E", "F", "I", "N", "UP", "B", "TID",]
ignore = [ "B008", "E203", "E501", "N802", "N803", "N806", "N812",]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"xml.etree".msg = "Use lxml.etree instead of xml.etree."
"xml.etree.ElementTree".msg = "Use lxml.etree as ET instead of xml.etree.ElementTree."

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
show_error_codes = true
namespace_packages = false
plugins = []
mypy_path = [ "src",]
disallow_untyped_defs = false
follow_imports = "normal"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config --maxfail=1"
testpaths = [
  "tests",
]
markers = [
  "unit: fast checks that should run in the default developer loop",
  "e2e: fast end-to-end SVG to PPTX conversion checks",
  "integration: cross-module tests that touch IO or heavier dependencies",
  "visual: visual regression tests that rely on PPTX rendering",
  "slow: long-running tests gated from default workflows",
  "smoke: lightweight end-to-end smoke tests hitting deployed services",
  "requires_network: tests that reach external network resources",
]

[tool.setuptools.package-data]
# setuptools globs do not match dot-prefixed filenames, so `**/*` omits
# `clean_slate/_rels/.rels` (required OPC package root relationships).
svg2ooxml = [
  "assets/pptx_scaffold/**/*",
  "assets/pptx_scaffold/clean_slate/_rels/.rels",
]

[tool.setuptools.packages.find]
where = [ "src", ".",]
# `figma2gslides` is intentionally packaged as a tool on top of `svg2ooxml`.
# Keep the converter API and tool API documented and tested as separate surfaces.
include = [ "svg2ooxml*", "figma2gslides*", "cli*",]
namespaces = false
